--- a/mobile/src/main/res/navigation/graph.xml
+++ b/mobile/src/main/res/navigation/graph.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="io.syslogic.clourun.MainFragment"
+        android:name="io.syslogic.cloudbuild.MainFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_main" />
 
